[gd_scene load_steps=3 format=3 uid="uid://b7vuq0ha8ta4a"]

[ext_resource type="Script" path="res://menus/character_selection.gd" id="1_w650o"]
[ext_resource type="Texture2D" uid="uid://bvan5tlj03jk8" path="res://game_assets/Background/Blue Ocean Sky.png" id="2_sj5up"]

[node name="character_selection" type="Node2D"]
script = ExtResource("1_w650o")

[node name="background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_sj5up")
metadata/_edit_lock_ = true

[node name="rock_select" type="Button" parent="."]
offset_left = 64.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 576.0
text = "Rock"

[node name="paper_select" type="Button" parent="."]
offset_left = 448.0
offset_top = 448.0
offset_right = 704.0
offset_bottom = 576.0
text = "Paper"

[node name="scissor_select" type="Button" parent="."]
offset_left = 832.0
offset_top = 448.0
offset_right = 1088.0
offset_bottom = 576.0
text = "Scissor"

[node name="Label" type="Label" parent="."]
offset_top = 104.0
offset_right = 1152.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(0.745098, 0.0196078, 0.396078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Character Selection"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="rock_select" to="." method="_on_rock_select_pressed"]
[connection signal="pressed" from="paper_select" to="." method="_on_paper_select_pressed"]
[connection signal="pressed" from="scissor_select" to="." method="_on_scissor_select_pressed"]
